--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,19 @@
             android:name=".ui.LoginActivity">
 
         </activity>
-        <activity android:name=".ui.SplashScreenActivity" >
+        <activity
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
+            android:name=".ui.SplashScreenActivity" >
+
+        </activity>
+        <activity
+            android:name=".ui.MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".ui.MainActivity"
-            android:label="@string/app_name">
-
         </activity>
     </application>
 
