--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,14 @@
             android:theme="@style/Toolbar" />
         <activity android:name=".ui.DaftarPoint" />
         <activity
-            android:name=".ui.DetailPoint"
-            android:theme="@style/Toolbar" />
+            android:name=".ui.detailpoint.DetailPoint"
+            android:theme="@style/Toolbar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.DetailPelanggaran"
             android:theme="@style/Toolbar" />
@@ -46,11 +52,7 @@
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
