--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.jaredrummler:material-spinner:1.3.1'
+
     implementation 'com.jakewharton:butterknife:10.2.1'
     implementation 'com.github.irfaan008:IRBottomNavigationView:1.0.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
