--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.LaguHymneActivity"
-            android:theme="@style/Toolbar"></activity>
+            android:theme="@style/Toolbar">
+
+        </activity>
         <activity android:name=".ui.TentangKamiActivity"
             android:theme="@style/Toolbar"/>
         <activity
