--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.LaguHymneActivity"
-            android:theme="@style/Toolbar"></activity>
+            android:theme="@style/Toolbar">
+        </activity>
         <activity android:name=".ui.TentangKamiActivity"
             android:theme="@style/Toolbar"/>
         <activity
@@ -33,11 +34,6 @@
         <activity
             android:name=".ui.detailpoint.DetailPoint"
             android:theme="@style/Toolbar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ui.DetailPelanggaran"
@@ -52,6 +48,11 @@
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
     </application>
