done detail pelanggaran

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,9 @@ def getURL() {
 }
 
 android {
+    androidExtensions {
+        experimental = true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
