--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             android:theme="@style/Toolbar" >
         </activity>
         <activity
-            android:name=".ui.DetailPelanggaran"
+            android:name=".ui.detailpelanggaran.DetailPelanggaran"
             android:theme="@style/Toolbar" />
         <activity
             android:name=".ui.LoginActivity"
