fix kelas per jurusan && siswa per kelas fix detail siswa

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.daftarkelas.DaftarKelas"></activity>
+        <activity
+            android:name=".ui.daftarkelas.DaftarKelas">
+
+        </activity>
 
         <activity android:name=".ui.LaguHymneActivity"
             android:theme="@style/Toolbar">
@@ -60,6 +63,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:theme="@style/Toolbar"
+            android:name=".ui.detailsiswa.DetailSiswaActivity" />
     </application>
 
 </manifest>
