--- a/bukusakuonline/src/main/AndroidManifest.xml
+++ b/bukusakuonline/src/main/AndroidManifest.xml
@@ -62,11 +62,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:windowSoftInputMode="adjustPan"
             android:name=".ui.MainActivity"
-            android:resizeableActivity="false"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme"
-            tools:targetApi="n">
+            android:theme="@style/AppTheme">
 
 
         </activity>
