compressed bitmap photo

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,11 @@ dependencies {
     implementation "androidx.core:core-ktx:+"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.github.d-max:spots-dialog:1.1@aar"
+    implementation 'id.zelory:compressor:2.1.0'
 }
 repositories {
     mavenCentral()
+    jcenter()
+
 }
