--- a/bukusakuonline/build.gradle
+++ b/bukusakuonline/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation "androidx.core:core-ktx:+"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0"
+    implementation "com.github.d-max:spots-dialog:1.1@aar"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 repositories {
