--- a/bukusakuonline/src/main/AndroidManifest.xml
+++ b/bukusakuonline/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.scc.bukusakuonline.user">
+
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,17 +15,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.daftarkelas.DaftarKelas">
-
-        </activity>
-
-
-        <activity android:name=".ui.LaguHymneActivity"
-            android:theme="@style/Toolbar">
-
-        </activity>
-        <activity android:name=".ui.TentangKamiActivity"
-            android:theme="@style/Toolbar"/>
+        <activity
+            android:theme="@style/Toolbar"
+            android:name=".ui.search.SearchActivity"></activity>
+        <activity android:name=".ui.daftarkelas.DaftarKelas"></activity>
+        <activity
+            android:name=".ui.LaguHymneActivity"
+            android:theme="@style/Toolbar"></activity>
+        <activity
+            android:name=".ui.TentangKamiActivity"
+            android:theme="@style/Toolbar" />
         <activity
             android:name=".ui.LainyaActivity"
             android:theme="@style/Toolbar" />
@@ -39,39 +40,30 @@
         <activity android:name=".ui.DaftarPoint" />
         <activity
             android:name=".ui.detailpoint.DetailPoint"
-            android:theme="@style/Toolbar" >
-
-        </activity>
+            android:theme="@style/Toolbar"></activity>
         <activity
-
             android:name=".ui.detailpelanggaran.DetailPelanggaran"
             android:theme="@style/Toolbar" />
         <activity
-
             android:name=".ui.LoginActivity"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
-
-
-        </activity>
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"></activity>
         <activity
             android:name=".ui.SplashScreenActivity"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" >
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:windowSoftInputMode="adjustPan"
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-
-
-        </activity>
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
-            android:theme="@style/Toolbar"
-            android:name=".ui.detailsiswa.DetailSiswaActivity" />
+            android:name=".ui.detailsiswa.DetailSiswaActivity"
+            android:theme="@style/Toolbar" />
     </application>
 
 </manifest>
