--- a/bukusakuonline/src/main/AndroidManifest.xml
+++ b/bukusakuonline/src/main/AndroidManifest.xml
@@ -16,12 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:theme="@style/Toolbar"
-            android:name=".ui.search.SearchActivity"></activity>
-        <activity android:name=".ui.daftarkelas.DaftarKelas"></activity>
+            android:name=".ui.search.SearchActivity"
+            android:theme="@style/Toolbar" />
+        <activity android:name=".ui.daftarkelas.DaftarKelas" />
         <activity
             android:name=".ui.LaguHymneActivity"
-            android:theme="@style/Toolbar"></activity>
+            android:theme="@style/Toolbar" />
         <activity
             android:name=".ui.TentangKamiActivity"
             android:theme="@style/Toolbar" />
@@ -40,13 +40,13 @@
         <activity android:name=".ui.DaftarPoint" />
         <activity
             android:name=".ui.detailpoint.DetailPoint"
-            android:theme="@style/Toolbar"></activity>
+            android:theme="@style/Toolbar" />
         <activity
             android:name=".ui.detailpelanggaran.DetailPelanggaran"
             android:theme="@style/Toolbar" />
         <activity
             android:name=".ui.LoginActivity"
-            android:theme="@style/Login"></activity>
+            android:theme="@style/Login" />
         <activity
             android:name=".ui.SplashScreenActivity"
             android:theme="@style/Splash">
@@ -60,7 +60,7 @@
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.detailsiswa.DetailSiswaActivity"
             android:theme="@style/Toolbar" />
